--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,44 @@
-buildscript{
-    ext{
+buildscript {
+    ext {
         springBootVersion = "2.1.7.RELEASE"
     }
-    repositories{
+    repositories {
         mavenCentral()
         jcenter()
     }
-    dependencies{
+    dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
-
 plugins {
     id 'java'
-
 }
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group 'com.jojoldu.book'
+group 'mos.mosback'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.session:spring-session-jdbc'
+    implementation 'org.projectlombok:lombok'
+    implementation 'com.h2database:h2'
+    implementation 'org.springframework.security:spring-security-test'
 
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    implementation('org.projectlombok:lombok')
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('com.h2database:h2')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    implementation('org.springframework.boot:spring-boot-starter-jdbc' )
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
-    testImplementation('org.springframework.boot:spring-boot-starter-mustache')
-    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
-    implementation('org.springframework.session:spring-session-jdbc')
-
-    testImplementation("org.springframework.security:spring-security-test")
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
