--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.jpa.show_sql = true
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+server.port=8081
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.open-in-view=false
+spring.mvc.servlet.load-on-startup=1
+server.servlet.encoding.force-response= true
+spring.profiles.include=oauth
+spring.session.store-type=jdbc
