--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ logging.level.org.springframework.web=DEBUG
 spring.mvc.view.prefix=/WEB-INF/templates/
 spring.mvc.view.suffix=.html
 
+#static resource
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+#spring.resources.add-mappings=true
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+
