--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.mvc.view.suffix=.html
 #static resource
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
+spring.mvc.contentnegotiation.media-types.json=application/x-www-form-urlencoded
+
 #spring.resources.add-mappings=true
 
 #spring.mvc.throw-exception-if-no-handler-found=true
