--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.open-in-view=false
 spring.mvc.servlet.load-on-startup=1
-
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
 logging.level.org.springframework.web=DEBUG
