임시비밀번호 수정, 이메일중복확인

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show_sql = true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-server.port=8080
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -11,10 +11,24 @@ spring.mvc.servlet.load-on-startup=1
 
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
+
+# ?? ??
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.mail=DEBUG
+
 
 spring.mvc.view.prefix=/WEB-INF/templates/
 spring.mvc.view.suffix=.html
+
+# mail
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=dmsthf1225@naver.coom
+spring.mail.password=dmsthf12fkqb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 #static resource
 spring.mvc.static-path-pattern=/static/**
