--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,31 @@
-spring.jpa.show_sql = true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# DB ?? ??
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
+# DB (H2) ?? ??
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
+
+# JPA ?? ??
+spring.jpa.show_sql = true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Spring ?? ??
 spring.mvc.servlet.load-on-startup=1
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
-logging.level.org.springframework.web=DEBUG
-
 spring.mvc.view.prefix=/WEB-INF/templates/
 spring.mvc.view.suffix=.html
 
-#static resource
+#??? static resource
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.mvc.contentnegotiation.media-types.json=application/x-www-form-urlencoded
-
 #spring.resources.add-mappings=true
-
 #spring.mvc.throw-exception-if-no-handler-found=true
 
+# ?? ?? ??
+logging.level.org.springframework.web=DEBUG
