--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
+src/main/java/mos/mosback/web/dto/PostsListResponseDto.java
+src/main/java/mos/mosback/web/dto/PostsListResponseDto.java
+src/main/java/mos/mosback/web/dto/PostsListResponseDto.java
