--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-group = 'jpabook'
-version = '0.0.1-SNAPSHOT'
+group = 'mos'
+version '1.0-SNAPSHOT'
 
 configurations {
     compileOnly {
@@ -21,7 +21,10 @@ configurations {
 
 repositories {
     mavenCentral()
-    jcenter()
+    maven {
+        url 'https://repo.clojars.org'
+        name 'Clojars'
+    }
 }
 
 // for Junit 5
@@ -30,9 +33,34 @@ test { // (2)
 }
 
 dependencies {
-    //(3)
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'io:io:0.2.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-mail' //메일 의존성
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+//    로그인 jwt 의존성
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
+
+
 
     // lombok
     implementation('org.projectlombok:lombok:1.18.20')
@@ -40,19 +68,4 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.20')
     testImplementation('org.projectlombok:lombok:1.18.20')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
-
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation("org.mariadb.jdbc:mariadb-java-client")
-    implementation('com.h2database:h2')
-
-    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
-    implementation('org.springframework.session:spring-session-jdbc')
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation("org.springframework.security:spring-security-test")
-
-    implementation 'org.springframework.security:spring-security-core:5.4.10'
-
-
-
 }
