--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 
-# DB ?? ??
+# DB
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
-# DB (H2) ?? ??
+# DB (H2)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA ?? ??
+# JPA
 spring.jpa.show_sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Spring ?? ??
+# Spring
 spring.mvc.servlet.load-on-startup=1
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
