--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,8 +41,8 @@ spring:
   mail:
     host: smtp.naver.com # 이메일 서버 호스트 (Gmail 사용 예)
     port: 587 # SMTP 포트 (Gmail의 경우 465 또는 587)
-    username: dmsthf1225@naver.com # 이메일 계정
-    password: dmsthf12fkqb # 이메일 계정의 암호 또는 앱 비밀번호 (보안 설정에 따라 다름)
+    username:  # 이메일 계정
+    password: # 이메일 계정의 암호 또는 앱 비밀번호 (보안 설정에 따라 다름)
     properties:
       mail:
         smtp:
