--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,19 @@ configurations {
 repositories {
     mavenCentral()
 }
+jar {
+    enabled = false
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.example.MainClass'
+    }
+}
+// for Junit 5
+test { // (2)
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
