--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ jar {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.example.MainClass'
+        attributes 'Main-Class': 'mos.mosback.Application'
     }
 }
 // for Junit 5
