--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,7 @@ spring:
     group:
       "local" : "local, jwt, oauth"
     active : local
----
-  server:
-    port: 8090
+
 ---
 spring:
   config:
@@ -16,6 +14,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+      settings:
+        web-allow-others: true
 
   datasource:
     driver-class-name: org.h2.Driver
@@ -23,6 +23,8 @@ spring:
     username: sa
     password:
 
+  server:
+    port: 8090
 
   main:
     allow-circular-references: true
