--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
         show_sql: true
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
 
   mail:
     host: smtp.naver.com # 이메일 서버 호스트 (Gmail 사용 예)
