--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -5,13 +5,13 @@ spring:
         registration:
           google:
             client-id: 729954756779-2usa0d48vh0048r4vmmljtlrlstvcjdh.apps.googleusercontent.com
-            client-secret: google-client-sercret
+            client-secret: 구글시크릿
             scope: profile, email
 
 
           naver:
             client-id: jg5_V_oaR2k60xfasDRa
-           client-secret: naver-client-secret
+            client-secret: 네이버시크릿
             redirect-uri: http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name, email, profile_image
@@ -20,7 +20,7 @@ spring:
 
           kakao:
             client-id: bbe971abb2538851ddabe4ef20d76744
-            client-secret: kakao-client-secret
+            client-secret: 카카오시크릿
             redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             client-authentication-method: POST
             authorization-grant-type: authorization_code
