--- a/build.gradle
+++ b/build.gradle
@@ -39,19 +39,6 @@ jar {
 test { // (2)
     useJUnitPlatform()
 }
-jar {
-    enabled = false
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'mos.mosback.Application'
-    }
-}
-// for Junit 5
-test { // (2)
-    useJUnitPlatform()
-}
 
 dependencies {
 
@@ -65,7 +52,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
-    implementation 'org.mariadb.jdbc:mariadb-java-client'
+    implementation("org.mariadb.jdbc:mariadb-java-client")
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -81,7 +68,7 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
 
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
-
+    implementation 'mysql:mysql-connector-java:8.0.26'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.auth0:java-jwt:4.2.1'
 
@@ -92,7 +79,3 @@ dependencies {
     testImplementation('org.projectlombok:lombok:1.18.20')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
 }
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
