--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 spring:
   profiles:
     group:
-      "local" : "local, jwt, oauth"
-    active : local
+      "local": "local, jwt, oauth"
+    active: local
 
----
-spring:
   config:
     activate:
       on-profile: "local"
@@ -14,34 +12,33 @@ spring:
     console:
       enabled: true
       path: /h2-console
-      settings:
-        web-allow-others: true
+    settings:
+      web-allow-others: true
 
   datasource:
-    url: jdbc:mysql://mosback.cr44edacdfoo.ap-northeast-2.rds.amazonaws.com:3306/mosback
-    username: mosback
-    password: ${DATABASE_PASSWORD}
-
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
 
   main:
     allow-circular-references: true
 
   jpa:
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL5Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
         format_sql: true
         show_sql: true
-
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
 
   mail:
     host: smtp.naver.com # 이메일 서버 호스트 (Gmail 사용 예)
     port: 587 # SMTP 포트 (Gmail의 경우 465 또는 587)
-    username: # 이메일 계정
-    password: # 이메일 계정의 암호 또는 앱 비밀번호 (보안 설정에 따라 다름)
+    username:
+    password:
     properties:
       mail:
         smtp:
@@ -49,9 +46,10 @@ spring:
           starttls:
             enable: true # TLS를 사용하려면 true, SSL을 사용하려면 false
         debug: true # 디버그 모드 활성화
-  logging:
-    level:
-      root: DEBUG
----
+
+logging:
+  level:
+    root: DEBUG
+
 server:
   port: 8090
