--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,9 +41,9 @@ spring:
 
   mail:
     host: smtp.naver.com # 이메일 서버 호스트 (Gmail 사용 예)
-    port: 587 # SMTP 포트 (Gmail의 경우 465 또는 587)
-    username:
-    password:
+    port: 465 # SMTP 포트 (Gmail의 경우 465 또는 587)
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
