--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.2.1'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-    implementation 'software.amazon.awssdk:s3'
+    implementation "software.amazon.awssdk:s3:2.13.0"
 
 
     // lombok
