--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,15 @@ repositories {
         name 'Clojars'
     }
 }
+jar {
+    enabled = false
+}
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'mos.mosback.Application'
+    }
+}
 // for Junit 5
 test { // (2)
     useJUnitPlatform()
@@ -44,9 +52,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
+    implementation 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'mysql:mysql-connector-java:8.0.34'
     implementation 'org.springframework.boot:spring-boot-starter-mail' //메일 의존성
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -58,10 +68,15 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
 
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
-
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.auth0:java-jwt:4.2.1'
+    implementation 'mysql:mysql-connector-java:8.0.26'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'com.auth0:java-jwt:4.2.1'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation "software.amazon.awssdk:s3:2.13.0"
 
 
     // lombok
@@ -71,7 +86,5 @@ dependencies {
     testImplementation('org.projectlombok:lombok:1.18.20')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
 
-    // build.gradle 적용
-    implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
