--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -4,14 +4,14 @@ spring:
       client:
         registration:
           google:
-            client-id: 729954756779-2usa0d48vh0048r4vmmljtlrlstvcjdh.apps.googleusercontent.com
-            client-secret: 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
+            client-id: #id
+            client-secret: #secret
             scope: profile, email
 
 
           naver:
-            client-id: jg5_V_oaR2k60xfasDRa
-            client-secret: XJ2kRT_oa8
+            client-id: #id
+            client-secret: secret
             redirect-uri: http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name, email, profile_image
@@ -19,8 +19,8 @@ spring:
 
 
           kakao:
-            client-id: bbe971abb2538851ddabe4ef20d76744
-            client-secret: oScTITuccuMT1o8C6X4Vv1arBKJkNzSE
+            client-id: #id
+            client-secret: secret
             redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             client-authentication-method: POST
             authorization-grant-type: authorization_code
