--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,5 @@
 cloud:
   aws:
     credentials:
-      accessKey: AKIAZ2K7DUYBWM7JVB4I
-      secretKey: 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
+      accessKey: zzz
+      secretKey: z+rKezYvL8+z
