--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,8 +35,8 @@ spring:
   mail:
     host: smtp.naver.com
     port: 465
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: dmsthf1225@naver.com
+    password: dkffkqb77!!
     properties:
       mail:
         smtp:
