--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,8 +63,8 @@ logging:
 cloud:
   aws:
     credentials:
-      accessKey: AKIAZ2K7DUYBW6RY24QH
-      secretKey: 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
+      accessKey: 
+      secretKey: 
     region:
       static: ap-northeast-2
     stack:
