--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -87,7 +87,7 @@ spring:
         debug: true
 
 jwt:
-  secretKey: 'dfadfekndchnsdifqld125654x8sdfnjldsncuelsdfs45x321df'
+  secretKey: 'dfadfekndchnsdi
 
   access:
     expiration: 360000000 # 1??(60?) (1000L(ms -> s) * 60L(s -> m) * 60L(m -> h))
